<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.swjtu.gcmformojo.CurrentUserActivity">

    <item
        android:id="@+id/action_qq_contacts"
        android:orderInCategory="100"
        android:title="@string/action_qq_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wechat_contacts"
        android:orderInCategory="100"
        android:title="@string/action_wechat_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_token"
        android:orderInCategory="100"
        android:title="@string/action_token"
        app:showAsAction="never" />
</menu>
